// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts list should render correctly even number of posts 1`] = `
<div
  className="double-post"
>
  <PostCard
    category={
      Object {
        "params": Object {
          "categoryId": "32",
          "categorySlug": "some-slug",
        },
      }
    }
    key="1"
    post={
      Object {
        "_embedded": Object {
          "author": Array [
            Object {
              "id": 55,
              "name": "Some author",
            },
          ],
          "wp:term": Array [
            Array [
              Object {
                "id": 1,
                "name": "Cat 1",
                "slug": "cat-1",
              },
            ],
          ],
        },
        "author": 55,
        "categories": Array [
          1,
        ],
        "content": Object {
          "protected": false,
          "rendered": "Some mock content to be rendered",
        },
        "date": "some mock date",
        "excerpt": Object {
          "protected": true,
          "rendered": "Some mock exceprt to be rendered",
        },
        "id": 1,
        "slug": "mock-slug",
        "title": Object {
          "rendered": "Mock title",
        },
      }
    }
  />
  <PostCard
    category={
      Object {
        "params": Object {
          "categoryId": "32",
          "categorySlug": "some-slug",
        },
      }
    }
    key="2"
    post={
      Object {
        "_embedded": Object {
          "author": Array [
            Object {
              "id": 55,
              "name": "Some author",
            },
          ],
          "wp:featuredmedia": Array [
            Object {
              "id": 3,
              "source_url": "someMockImageUrl",
            },
          ],
          "wp:term": Array [
            Array [
              Object {
                "id": 1,
                "name": "Cat 1",
                "slug": "cat-1",
              },
            ],
          ],
        },
        "author": 55,
        "categories": Array [
          1,
        ],
        "content": Object {
          "protected": false,
          "rendered": "Some mock content to be rendered",
        },
        "date": "some mock date",
        "excerpt": Object {
          "protected": true,
          "rendered": "Some mock exceprt to be rendered",
        },
        "featured_media": 3,
        "id": 2,
        "slug": "mock-slug",
        "title": Object {
          "rendered": "Mock title",
        },
      }
    }
  />
</div>
`;

exports[`Posts list should render correctly odd number of posts 1`] = `
<div
  className="single-post"
>
  <PostCard
    category={
      Object {
        "params": Object {
          "categoryId": "32",
          "categorySlug": "some-slug",
        },
      }
    }
    key="1"
    post={
      Object {
        "_embedded": Object {
          "author": Array [
            Object {
              "id": 55,
              "name": "Some author",
            },
          ],
          "wp:term": Array [
            Array [
              Object {
                "id": 1,
                "name": "Cat 1",
                "slug": "cat-1",
              },
            ],
          ],
        },
        "author": 55,
        "categories": Array [
          43,
          54,
          23,
        ],
        "content": Object {
          "protected": false,
          "rendered": "Some mock content to be rendered",
        },
        "date": "some mock date",
        "excerpt": Object {
          "protected": true,
          "rendered": "Some mock exceprt to be rendered",
        },
        "id": 1,
        "slug": "mock-slug",
        "title": Object {
          "rendered": "Mock title",
        },
      }
    }
  />
</div>
`;
